--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,6 @@ POSTGRES_DATABASE=
 
 # `openssl rand -base64 32`
 AUTH_SECRET=
+# 部署到vercel时，使用`https://${NEXT_PUBLIC_VERCEL_URL}/api/auth`
+# https://vercel.com/docs/projects/environment-variables/system-environment-variables#framework-environment-variables
 AUTH_URL=http://localhost:3000/api/auth
