refactor: 重构代码,尝试修复 AUTH_URL

--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
-AUTH_URL=https://${NEXT_PUBLIC_VERCEL_URL}/api/auth
+POSTGRES_URL="postgres://default:FCs7we6YHAMk@ep-crimson-mud-a472laem-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:FCs7we6YHAMk@ep-crimson-mud-a472laem-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:FCs7we6YHAMk@ep-crimson-mud-a472laem-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:FCs7we6YHAMk@ep-crimson-mud-a472laem.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-crimson-mud-a472laem-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="FCs7we6YHAMk"
+POSTGRES_DATABASE="verceldb"
+
+AUTH_SECRET=zStT6/XsJrUTW9Z62W2jnHaH1FDVBflDgJ1hx/K4+sI=
+AUTH_URL=http://localhost:3000
